--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - git clone https://github.com/flutter/flutter.git -b beta
   - ./flutter/bin/flutter doctor
 script:
-  - ./flutter/bin/flutter build apk
+  - cd example && ../flutter/bin/flutter build apk
 cache:
   directories:
     - $HOME/.pub-cache
