--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,35 @@
-os:
-  - linux
-sudo: false
-addons:
-  apt:
-    # Flutter depends on /usr/lib/x86_64-linux-gnu/libstdc++.so.6 version GLIBCXX_3.4.18
-    sources:
-      - ubuntu-toolchain-r-test # if we don't specify this, the libstdc++6 we get is the wrong version
-    packages:
-      - libstdc++6
-      - fonts-droid
-before_script:
-  - git clone https://github.com/flutter/flutter.git -b beta
-  - ./flutter/bin/flutter doctor
-script:
-  - cd example && ../flutter/bin/flutter build apk
-cache:
-  directories:
-    - $HOME/.pub-cache
+matrix:
+  include:
+    - language: android
+      os:
+        - linux
+        - osx
+      sudo: false
+      addons:
+        apt:
+          # Flutter depends on /usr/lib/x86_64-linux-gnu/libstdc++.so.6 version GLIBCXX_3.4.18
+          sources:
+            - ubuntu-toolchain-r-test # if we don't specify this, the libstdc++6 we get is the wrong version
+          packages:
+            - libstdc++6
+            - fonts-droid
+      before_script:
+        - git clone https://github.com/flutter/flutter.git -b dev
+        - ./flutter/bin/flutter doctor
+      script:
+        - cd example && ../flutter/bin/flutter build apk
+      cache:
+        directories:
+          - $HOME/.pub-cache
+    - language: objective-c
+      os:
+        - osx
+      sudo: false
+      before_script:
+        - git clone https://github.com/flutter/flutter.git -b dev
+        - ./flutter/bin/flutter doctor
+      script:
+        - cd example && ../flutter/bin/flutter build ipa
+      cache:
+        directories:
+          - $HOME/.pub-cache
